--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,60 +1,35 @@
-[tool.pytest.ini_options]
-addopts = ["-rfEX", "-pno:warnings"]
-python_files = ["test_*.py", "*_test.py"]
-testpaths = ["tests"]
-
-[tool.black]
-line-length = 88
-exclude = '''
-(
-  /(
-      \.eggs
-    | \.git
-    | \.tox
-    | \.venv
-    | _build
-    | .build
-    | bazel-*
-    | build
-    | venv
-    | lib
-    | dist
-    | typings
-  )/
-)
-'''
+[project]
+name = "BentoOCR"
+version = "0.1.0"
+description = "OCR Service with BentoML"
+readme = "README.md"
+requires-python = ">=3.10"
+dependencies = ["bentoml>=1.3.20", "easyocr>=1.7.2"]
 
 [tool.ruff]
-# similar to black's
-line-length = 88
 # We ignore E501 (line too long) here because we keep user-visible strings on one line.
+target-version = "py310"
+extend-include = ["*.ipynb"]
+preview = true
+line-length = 119
+indent-width = 2
+
+[tool.ruff.format]
+preview = true
+quote-style = "single"
+indent-style = "space"
+skip-magic-trailing-comma = true
+
+[tool.ruff.lint]
 ignore = ["E501"]
-exclude = ["bazel-*/", "venv", "typings"]
-target-version = "py311"
 
-[tool.ruff.pydocstyle]
-convention = "google"
+[dependency-groups]
+dev = ["ipython>=8.31.0"]
 
-[tool.ruff.isort]
-lines-after-imports = 2
-
-[tool.isort]
-profile = "black"
-line_length = 88
-length_sort = true
-force_single_line = true
-order_by_type = true
-known_first_party = ["bentoml"]
-force_alphabetical_sort_within_sections = true
-skip_glob = ["typings/*", "tests/*", "venv/*", "lib/*", "bazel-*"]
-
-[tool.pyright]
-pythonVersion = "3.11"
-exclude = ["bazel-*"]
-analysis.useLibraryCodeForTypes = true
-strict = true
-strictListInference = true
-strictDictionaryInference = true
-strictSetInference = true
-strictParameterNoneValue = true
-enableTypeIgnoreComments = true
+[tool.bentoml.build]
+service = "service:OCRService"
+include = ["service.py"]
+[tool.bentoml.build.python]
+lock_packages = false
+[tool.bentoml.build.docker]
+python_version = "3.11"
