--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,9 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = ["bentoml>=1.3.20", "easyocr>=1.7.2"]
 
+[project.scripts]
+service = "service:OCRService"
+
 [tool.ruff]
 # We ignore E501 (line too long) here because we keep user-visible strings on one line.
 target-version = "py310"
